# vision-audio-visual

./: .gitignore  ALIEN4_FIX_VERIFICATION.md  ALIEN4_QUICK_REFERENCE.md  ARCHIVED_FEATURES.md  Alien4.cpp  BPM_TRANSITION_SOLUTION.md  CHANGELOG.md  CHAOS_GRAIN_INTEGRATION_REPORT.md  CLEANUP_REPORT.md  CMakeLists.txt  COMPARISON.txt  FEATURE_VERIFICATION.md  LICENSE  README.md  README_PROJECT_STATUS.md  REGION_MAP_DEBUG.md  TEST_RESULTS_SUMMARY.txt  VAV_20251103_RESTORATION_PLAN.md  VAV_20251105_ENV_Decay_Color_Unification.md  VAV_20251105_Sequential_Switch實作.md  alien4_extension.cpp.backup  bpm_transition_demo.py  breakbeat_engine.py  breakbeat_generator.py  breakbeat_gui.py  breakbeat_gui_test.py  build_alien4.sh  check_alien4_status.py  main_compact.py  midi_monitor.py  monitor_alien4.py  start_breakbeat.command  start_narrator.command  start_vav.command  test_alien4_detailed.py  test_alien4_features.py  test_alien4_final_verification.py  test_bpm_transition.py  test_bpm_unit.py  test_chaos_grain.py  (+11 more)
V2/: generate_16_combos.py  start_vav_v2.command  test_region_fusion.py
V2/vav/audio/: audio_process.py
V2/vav/core/: controller.py
V2/vav/gui/: compact_main_window.py  device_dialog.py  meter_widget.py  scope_widget.py  visual_preview_widget.py
V2/vav/midi/: __init__.py
V2/vav/utils/: config.py
V2/vav/vision/: media_cache.py
V2/vav/visual/: content_aware_regions.py  cython_renderer.pyx  qt_opengl_renderer.py  (+1 more)
archived/: CHANGELOG_20251019.md  CHANGELOG_EllenRipley_Fix.md  QT_OPENGL_FIX_REPORT.md  QT_OPENGL_THREADING_FIX.md  SD_FPS_ISSUE_RESOLVED.md  alien4_extension.cpp.backup_20251115_164142  shader_verification_checklist.md
archived/docs/: CV_SEQ_QUICK_SUMMARY.md  DISCUSSION_PREPARATION.md  IMPLEMENTATION_SUMMARY.md  PBO_IMPLEMENTATION_SUMMARY.md  REGION_RENDERING_GUIDE.md  VAV_20251103_RESTORATION_STATUS.md  VAV_GUI_REORGANIZATION_PLAN.md
archived/docs_20251115/: ALIEN4_FIX_REPORT.md  DELAY_STEREO_ANALYSIS.md  EQ_FIX_SUMMARY.md
archived/tests/: test_contour_detection.py  test_edge_cv.py  test_effects_optimization.py  test_ellen_ripley_chaos.py  test_gpu_region_mode.py  test_gpu_region_visual.py  test_grain_chaos.py  test_grain_performance.py  test_grain_stats.py  test_saliency_camera.py  verify_region_mode_code.py
breakbeat_cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  build.sh
breakbeat_cpp/include/: breakbeat_engine.h
breakbeat_cpp/python/: bindings.cpp
breakbeat_cpp/src/: breakbeat_engine.cpp  breakbeat_pattern.cpp  compressor.cpp  compressor.h
docs/: BREAKBEAT_CHANGELOG.md  CHANGELOG.md  FIX_REPORT.md  FOLDER_STRUCTURE.md  ISSUES_FOR_NEXT_SESSION.md  PROJECT_HANDOFF.md  README.md  REBUILD_INTRO.md  VAV_AI_Integration_Research_Round2.md.archived  VIDEO_FEATURE.md
related_projects/VAV_AudioEngine/: ALIEN4_FEATURES.md  CMakeLists.txt  IMPLEMENTATION_ROADMAP.md  README.md  VERIFICATION_CHECKLIST.md  VERIFICATION_README.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  test_current_features.py  test_new_features.py  test_python.py  test_reverb.cpp
related_projects/VAV_AudioEngine/src/: alien4_engine.hpp  audio_layer.hpp  python_bindings.cpp  three_band_eq.hpp
related_projects/VAV_AudioEngine/src/ripley/: reverb_processor.hpp
related_projects/VAV_AudioEngine/src_backup_20251114_113049/: alien4_engine.hpp  python_bindings.cpp  three_band_eq.hpp
related_projects/VAV_AudioEngine/src_backup_20251114_113049/ripley/: stereo_delay.hpp
related_projects/VAV_AudioEngine/test/: test_alien4.cpp
related_projects/VAV_variant/: .gitignore  BENCHMARK_RESULTS_20251104.md  BENCHMARK_SD_RESULTS_20251104.md  CHANGELOG.md  GPU_RENDERER_SWITCH_20251104.md  GUI_CONTROLS.md  HOW_TO_START.md  Obserfour.cpp  Quantizer.cpp  README_VARIANT.md  VAV_20251104_2100_工作日誌.md  VAV_20251104_GPU_MILESTONE.md  requirements.txt  test_scanner.py  啟動_CV_Overlay_測試.command
vav/audio/: alien4_wrapper.py  analysis.py  audio_process.py  io.py
vav/core/: controller.py
vav/cv_generator/: contour_cv.py  contour_scanner.py  envelope.py  sequencer.py  signal.py
vav/gui/: anchor_xy_pad.py  compact_main_window.py  cv_meter_window.py  device_dialog.py  meter_widget.py  scope_widget.py  visual_preview_widget.py
vav/midi/: midi_learn.py
vav/utils/: config.py  cv_colors.py
vav/vision/: camera.py
vav/visual/: numba_renderer.py  qt_opengl_renderer.py  region_mapper.py  sd_shape_generator.py
vision_narrator/: .gitignore  CHANGELOG.md  INSTALL.md  README.md  VAV_INTEGRATION.md  config.yaml  narrator.py  narrator_gui.py  requirements.txt  run.sh  run_gui.sh
vision_narrator/modules/: __init__.py  audio_devices.py  camera.py  tts_engine.py  vision_model.py
(+66 files in other folders)
